# Epi

./: CMakeLists.txt  Epi.simg  README.md
include/: Logging.h  Prerequisites.h  Results.h  Types.h
include/arguments/: Arguments.h
include/hla/: HlaTypes.h
include/immunogenicity/: BlomapEncoder.h  DecisionTree.h  Parameter.h  ParameterType.h  RandomForest.h
include/index/: CdsIndex.h  Exon.h  Protein.h  ProteinIndex.h  StartCodon.h
include/peptides/: CuttingRange.h  InfluenceRange.h  LineIterator.h  NetMHCpanIterator.h  NetMhcPan.h  Peptide.h  PeptideIterator.h  Peptidome.h
include/phasing/: CodonChange.h  Haploblock.h  Haplotype.h  Phaser.h
include/tpm/: TpmCount.h
include/util/: DNAUtil.h  GtfUtil.h  VariantUtil.h  VcfUtil.h  VepUtil.h
include/vcf/: Contig.h  Variant.h  VcfFile.h  VcfHeader.h  VcfLineFilter.h  VcfLineIterator.h
include/vcf/filters/: HaplotypeCallerFilter.h  MutectLineFilter.h  (+3 more)
include/vep/: VariantEffect.h  VepFile.h
src/: main.cpp
src/arguments/: Arguments.cpp
src/hla/: HlaTypes.cpp
src/immunogenicity/: DecisionTree.cpp  Parameter.cpp  RandomForest.cpp
src/index/: CdsIndex.cpp  Exon.cpp  Protein.cpp  ProteinIndex.cpp  StartCodon.cpp
src/peptides/: CuttingRange.cpp  InfluenceRange.cpp  LineIterator.cpp  NetMHCpanIterator.cpp  Peptide.cpp  PeptideIterator.cpp  Peptidome.cpp
src/phasing/: CodonChange.cpp  Haploblock.cpp  Haplotype.cpp
src/tpm/: TpmCount.cpp
src/vcf/: Contig.cpp  Variant.cpp  VcfFile.cpp  VcfHeader.cpp  VcfLineFilter.cpp  VcfLineIterator.cpp
src/vep/: VariantEffect.cpp  VepFile.cpp
(+5 files in other folders)
